# calendar-generator

./: .gitignore  LICENSE  README.md  calendar_generator.py  format.sh  pyproject.toml
