[tool.poetry]
name = "calendar-generator"
version = "0.1.0"
description = "Generates year-to-page printable calendars"
authors = ["Michael B <michael@ramyun.co.uk>"]

[tool.poetry.dependencies]
python = "~3.9"
reportlab = "^3.5.65"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
